# rpcxx

./: .gitignore  CMakeLists.txt  LICENCE.txt  README.md  qtc_helper.py
cmake/: RPCXXCodegen.cmake
codegen/: CMakeLists.txt
codegen/include/: codegen.hpp  cppgen.hpp  gogen.hpp
codegen/include/cpp/: clientgen.hpp  servergen.hpp  typegen.hpp
codegen/src/: codegen.cpp  codegen.lua.h  cppgen.cpp  gogen.cpp  populate.cpp
include/future/: cancel_token.hpp  executor.hpp  future.hpp  gather.hpp  move_func.hpp  multi_future.hpp  signal.hpp  to_std_fut.hpp
include/json_view/: algo.hpp  alloc.hpp  data.hpp  dump.hpp  json.hpp  json_view.hpp  key.hpp  parse.hpp  pointer.hpp  trace_frame.hpp
include/membuff/: membuff.hpp
include/meta/: compiler_macros.hpp  meta.hpp  visit.hpp
include/rc/: rc.hpp
include/rpcxx/: client.hpp  common.hpp  context.hpp  exception.hpp  handler.hpp  protocol.hpp  rpcxx.hpp  server.hpp  transport.hpp  utils.hpp
src/: future.cpp
src/json_view/: algo.cpp  alloc_adapter.hpp  dump_json.cpp  dump_msgpack.cpp  endian.hpp  json_view.cpp  parse_json.cpp  parse_msgpack.cpp  pointer.cpp
src/rpcxx/: client.cpp  context.cpp  handler.cpp  server.cpp  transport.cpp
test/: CMakeLists.txt  spec.lua
test/rpcxx/: codegen_test.cpp  describe_test.cpp  future_test.cpp  json_bench.cpp  json_fuzzing.cpp  json_samples.hpp  json_test.cpp  msgpack_fuzzing.cpp  msgpack_test.cpp  rpc_bench.cpp  rpc_test.cpp  test_methods.hpp
test/rps/: CMakeLists.txt  common.hpp  rps_client.cpp  rps_server.cpp
